--- a/BartenderApp/BartenderApp.csproj
+++ b/BartenderApp/BartenderApp.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BartenderDbContext.cs" />
     <Compile Include="Models\Drink.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
